[package]
name = "pic_fly"
description = "A simple chevereto image upload tool."
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.21", features = ["derive"] }
futures = "0.3.31"
mime = "0.3.17"
mime_guess = "2.0.5"
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
url = "2.5.3"
serde_derive = "1.0.215"

[[bin]]
name = "pf"
path = "src/main.rs"
